--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
+    "@playwright/test": "^1.57.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,7 +25,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.4",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
