--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.17",
     "framer-motion": "^12.27.0",
+    "idb": "^8.0.3",
     "next": "15.1.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
