--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-virtual": "^3.13.17",
     "framer-motion": "^12.27.0",
     "idb": "^8.0.3",
